--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -62,7 +62,8 @@ h4{
   color: rgba(255,255,255,0.6);
   line-height: 1.5;
   outline: none;
-  text-align: center;
+  float: right;
+  margin-right: 12px;
 }
 
 .terms {
