updated logout button

--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -305,6 +305,12 @@ h4{
   cursor: pointer;
 }
 
+.btn-logout {
+  background-color: #C0392B;
+  border: 0;
+  color: white;
+}
+
 /* Cursor */
 .pointer{
   cursor: pointer;
