--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -281,14 +281,8 @@ h4{
 
 .btn-email{
   color: white !important;
-  background-color: transparent !important;
-  border: 1px solid #A93226 !important;
-}
-
-.btn-email:hover{
-  border: 1px solid #A93226 !important;
   background-color: #A93226 !important;
-  color: white;
+  border: 0 !important;
 }
 
 .swal2-cancel {
