--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -28,7 +28,7 @@ h4{
   padding: 1px;
 }
 
-.element-fluid{
+.select-default > .el-select {
   width: 100%;
 }
 
@@ -89,6 +89,10 @@ h4{
 
 .medium {
   font-size: 0.75em !important;
+}
+
+.none-transform {
+  text-transform: none !important;
 }
 
 /* color */
