--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -18,6 +18,7 @@ h3{
 h4{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
 /* element */
 .el-row {
   padding-top: 15px;
@@ -149,6 +150,10 @@ h4{
 
 .one-edge-shadow {
   box-shadow: 0 10px 6px -6px grey;
+}
+
+.v--modal{
+  border-radius: 8px;
 }
 
 /* position */
