--- a/src/assets/css/animation.css
+++ b/src/assets/css/animation.css
@@ -1,3 +1,4 @@
+/*fade*/
 .fade-enter-active, .fade-leave-active {
     transition: opacity 0.5s;
 }
@@ -9,6 +10,7 @@
   opacity: 0;
 }
 
+/*slide*/
 .slide-enter-active {
   animation: slide-in 1s forwards;
 }
@@ -17,34 +19,6 @@
   animation: slide-out 1s forwards;
   transition: opacity 2s;
   opacity: 0;
-}
-
-.pop-out-enter-active,
-.pop-out-leave-active {
-  transition: all 0.5s;
-}
-.pop-out-enter,
-.pop-out-leave-active {
-  opacity: 0;
-  transform: translateY(24px);
-}
-
-@keyframes shaking {
-  0% { transform: translate(15px); }
-  20% { transform: translate(-15px); }
-  40% { transform: translate(7.5px); }
-  60% { transform: translate(-7.5px); }
-  80% { transform: translate(4px); }
-  100% { transform: translate(0px); }
-}
-
-@-webkit-keyframes shaking {
-  0% { -webkit-transform: translate(15px); }
-  20% { -webkit-transform: translate(-15px); }
-  40% { -webkit-transform: translate(7.5px); }
-  60% { -webkit-transform: translate(-7.5px); }
-  80% { -webkit-transform: translate(4px); }
-  100% { -webkit-transform: translate(0px); }
 }
 
 @keyframes slide-in {
@@ -63,4 +37,115 @@
   to{
       transform: translateY(25px);
   }
+}
+
+/*popout*/
+.pop-out-enter-active,
+.pop-out-leave-active {
+  transition: all 0.5s;
+}
+.pop-out-enter,
+.pop-out-leave-active {
+  opacity: 0;
+  transform: translateY(24px);
+}
+
+/*shaking*/
+@keyframes shaking {
+  0% { transform: translate(15px); }
+  20% { transform: translate(-15px); }
+  40% { transform: translate(7.5px); }
+  60% { transform: translate(-7.5px); }
+  80% { transform: translate(4px); }
+  100% { transform: translate(0px); }
+}
+
+@-webkit-keyframes shaking {
+  0% { -webkit-transform: translate(15px); }
+  20% { -webkit-transform: translate(-15px); }
+  40% { -webkit-transform: translate(7.5px); }
+  60% { -webkit-transform: translate(-7.5px); }
+  80% { -webkit-transform: translate(4px); }
+  100% { -webkit-transform: translate(0px); }
+}
+
+/*bounce*/
+@keyframes bounce {
+  from,
+  20%,
+  53%,
+  80%,
+  to {
+    -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+  }
+
+  40%,
+  43% {
+    -webkit-animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    -webkit-transform: translate3d(0, -30px, 0);
+    transform: translate3d(0, -30px, 0);
+  }
+
+  70% {
+    -webkit-animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    animation-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+    -webkit-transform: translate3d(0, -15px, 0);
+    transform: translate3d(0, -15px, 0);
+  }
+
+  90% {
+    -webkit-transform: translate3d(0, -4px, 0);
+    transform: translate3d(0, -4px, 0);
+  }
+}
+
+.bounce {
+  -webkit-animation-name: bounce;
+  animation-name: bounce;
+  -webkit-transform-origin: center bottom;
+  transform-origin: center bottom;
+}
+
+/*pulse*/
+@-webkit-keyframes pulse {
+  from {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+
+  50% {
+    -webkit-transform: scale3d(1.1, 1.1, 1.1);
+    transform: scale3d(1.1, 1.1, 1.1);
+  }
+
+  to {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+}
+
+@keyframes pulse {
+  from {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+
+  50% {
+    -webkit-transform: scale3d(1.1, 1.1, 1.1);
+    transform: scale3d(1.1, 1.1, 1.1);
+  }
+
+  to {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+}
+
+.pulse {
+  -webkit-animation-name: pulse;
+  animation-name: pulse;
 }
