redesign home page
-Support mobile view.
-Removed unnecessary components.

--- a/src/assets/css/color.css
+++ b/src/assets/css/color.css
@@ -96,3 +96,15 @@
 .strongbow {
   color: #922B21;
 }
+
+.snow {
+  color : snow
+}
+
+.whitesmoke{
+  color: whitesmoke;
+}
+
+.smoke{
+  color: #D0D3D4;
+}
