--- a/src/assets/css/animation.css
+++ b/src/assets/css/animation.css
@@ -1,13 +1,17 @@
 /*fade*/
-.fade-enter-active, .fade-leave-active {
-    transition: opacity 0.5s;
-}
-.fade-enter, .fade-leave-to /* .fade-leave-active below version 2.1.8 */ {
-    opacity: 0;
+.fade-enter,
+.fade-leave-to {
+  opacity: 0;
 }
 
-.fade-enter, .fade-leave-to {
-  opacity: 0;
+.fade-enter-to,
+.fade-leave {
+  opacity: 1;
+}
+
+.fade-enter-active,
+.fade-leave-active {
+  transition: all 0.4s ease;
 }
 
 /*slide*/
@@ -23,7 +27,7 @@
 
 @keyframes slide-in {
   from{
-     transform: translateY(25px);
+     transform: translateY(100px);
   }
   to{
       transform: translateY(0px);
