--- a/src/assets/css/fontStyle.css
+++ b/src/assets/css/fontStyle.css
@@ -11,7 +11,11 @@
 }
 
 .bold{
-  font-weight: bold;
+  font-weight: bold!important;
+}
+
+.bolder{
+  font-weight: bolder!important;
 }
 
 .copyright {
