--- a/src/assets/css/standard_theme.css
+++ b/src/assets/css/standard_theme.css
@@ -2,31 +2,32 @@ html, body{
   height:100%;
   overflow-x: hidden;
   font-family: 'Nunito', Helvetica, Arial, sans-serif;
+  font-size: 1.125rem;
 }
 
 /*heading*/
 h1{
-  font-family: 'Raleway', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'Raleway', 'Nunito', Helvetica, Arial, sans-serif;
 }
 
 h2{
-  font-family: 'Raleway', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'Raleway', 'Nunito', Helvetica, Arial, sans-serif;
 }
 
 h3{
-  font-family: 'Raleway', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'Raleway', 'Nunito', Helvetica, Arial, sans-serif;
 }
 
 h4{
-  font-family: 'Raleway', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'Raleway', 'Nunito', Helvetica, Arial, sans-serif;
 }
 
 h5{
-  font-family: 'Raleway', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'Raleway', 'Nunito', Helvetica, Arial, sans-serif;
 }
 
 h6{
-  font-family: 'Raleway', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'Raleway', 'Nunito', Helvetica, Arial, sans-serif;
 }
 /*
   primary:    #0062cc
@@ -65,6 +66,14 @@ h6{
 }
 
 /*button*/
+.btn-auth-circle{
+  border-radius: 30px;
+  border-color: #0062cc;
+  background-color: transparent;
+  border: 2px solid #0062cc;
+  color: #0062cc !important;
+}
+
 .btn-signup{
   border-radius: 30px;
   border-color: #0062cc;
