user preference page development

--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -46,6 +46,18 @@
 }
 
 /* position */
+.inline {
+  display: inline;
+}
+
+.block{
+  display: block;
+}
+
+.inline-block{
+  display: inline-block;
+}
+
 .center{
   text-align: center;
 }
