--- a/src/assets/css/standard_theme.css
+++ b/src/assets/css/standard_theme.css
@@ -65,6 +65,11 @@ h6{
   font-size: 20px;
 }
 
+.standard-label{
+  font-size: 14px;
+  min-width: 100px;
+}
+
 /*button*/
 .btn-auth-circle{
   border-radius: 30px;
@@ -119,4 +124,10 @@ h6{
   border: 0 !important;
   padding: 10px !important;
   margin-right: 8px;
+}
+
+/*classes*/
+.el-row{
+  padding-top: 4px;
+  padding-bottom: 4px;
 }
